# EasyCLI

./: .gitignore  CMakeLists.txt  EasyCLI.c  EasyCLI.h  LICENSE  README.md  build.cmd  build.sh
doc/: EasyCLI.md
include/: EasyCLI.h
src/: EasyCLI.c
test/: CMakeLists.txt  test.c
